@@ -19,6 +19,9 @@ git-annex (6.20160512) UNRELEASED; urgency=medium
     when in a subdirectory of the repository. This affected git annex view.
   * Fix crash when entering/changing view in a subdirectory of a repo that
     has a dotfile in its root.
+  * enableremote: Can now be used to explicitly enable git-annex to use
+    git remotes. Using the command this way prevents other git-annex
+    commands from probing new git remotes to auto-enable them.
   * Support building with ghc 8.0.1.
   * Pass the various gnupg-options configs to gpg in several cases where
     they were not before. Most notably, gnupg-decrypt-options is now
